k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: ${REPLICAS}
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      $REQUIRE_NONCRITICAL_EXCEPT_PRODUCTION
      $TOLERATE_NONCRITICAL_EXCEPT_PRODUCTION

      containers:
      - name: gateway
        image: eu.gcr.io/boclips-prod/boclips/gateway:${VERSION}
        ports:
        - name: http
          containerPort: 5000
          protocol: TCP
        resources:
          requests:
            cpu: "700m"
            memory: "300Mi"
          limits:
            cpu: "700m"
            memory: "500Mi"

        readinessProbe:
          httpGet:
            path: /v1/actuator/health
            port: 5000
          failureThreshold: 3
          initialDelaySeconds: 50
          periodSeconds: 5
          successThreshold: 1
          timeoutSeconds: 5

        livenessProbe:
          httpGet:
            path: /v1/actuator/health
            port: 5000
          failureThreshold: 2
          initialDelaySeconds: 60
          periodSeconds: 20
          successThreshold: 1
          timeoutSeconds: 5
