k8s/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: api.${DOMAIN}
    http:
      paths:
      - path: /
        backend:
          serviceName: gateway
          servicePort: http
  - host: backoffice.${DOMAIN}
    http:
      paths:
      - path: /v1
        backend:
          serviceName: gateway
          servicePort: http
  - host: educators.${DOMAIN}
    http:
      paths:
        - path: /v1
          backend:
            serviceName: gateway
            servicePort: http
  - host: teachers.${DOMAIN}
    http:
      paths:
        - path: /v1
          backend:
            serviceName: gateway
            servicePort: http
